# contextily

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README_dev.md  contextily_guide.ipynb  contextily_local_basemaps.ipynb  environment.yml  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  test.ipynb  warping_guide.ipynb
.github/workflows/: release_to_pypi.yml  tests.yaml
ci/envs/: 310-conda-forge.yaml  310-latest-conda-forge.yaml  311-conda-forge.yaml  311-latest-conda-forge.yaml  312-latest-conda-forge.yaml  313-latest-conda-forge.yaml  314-latest-conda-forge.yaml  37-minimal.yaml  38-latest-conda-forge.yaml  39-minimal.yaml
ci/travis/: 35-minimal.yaml  36-minimal.yaml  37-latest-conda-forge.yaml
contextily/: __init__.py  _providers.py  place.py  plotting.py  progress.py  tile.py  tile_providers.py
docs/: conf.py  environment.yml  index.rst  reference.rst
docs/_static/css/: custom.css
docs/_templates/: docs-sidebar.html  layout.html
examples/: plot_map.py
notebooks/: add_basemap_deepdive.ipynb  friends_cenpy_osmnx.ipynb  friends_gee.ipynb  intro_guide.ipynb  places_guide.ipynb  providers_deepdive.ipynb  warping_guide.ipynb  working_with_local_files.ipynb
scripts/: fetch_wmts_providers.py  parse_leaflet_providers.py
tests/: conftest.py  test_ctx.py  test_cx.py  test_providers.py
