[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "contextily"
dynamic = ["version"]
authors = [
    {name = "Dani Arribas-Bel", email = "daniel.arribas.bel@gmail.com"},
]
maintainers = [
    {name = "contextily contributors"},
]
license = {text = "3-Clause BSD"}
description = "Context geo-tiles in Python"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Matplotlib",
]
requires-python = ">=3.8"
dependencies = [
    "geopy",
    "matplotlib",
    "mercantile",
    "pillow",
    "rasterio",
    "requests",
    "joblib",
    "xyzservices"
]

[project.urls]
Home = "https://github.com/geopandas/contextily"
Repository = "https://github.com/geopandas/contextily"

[tool.setuptools.packages.find]
include = [
    "contextily",
    "contextily.*",
]

[tool.coverage.run]
omit = ["tests/*"]