[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "contextily"
dynamic = ["version"]
authors = [
    {name = "Dani Arribas-Bel", email = "daniel.arribas.bel@gmail.com"},
]
maintainers = [
    {name = "contextily contributors"},
]
license = {text = "3-Clause BSD"}
description = "Context geo-tiles in Python"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Matplotlib",
]
requires-python = ">=3.10"
dependencies = [
    "geopy",
    "matplotlib",
    "mercantile",
    "pillow",
    "rasterio",
    "requests",
    "joblib",
    "xyzservices",
    "tqdm"
]

[project.urls]
Home = "https://github.com/geopandas/contextily"
Repository = "https://github.com/geopandas/contextily"

[tool.setuptools.packages.find]
include = [
    "contextily",
    "contextily.*",
]

[tool.coverage.run]
omit = ["tests/*"]