[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "contextily"
dynamic = ["version"]
authors = [
    {name = "Dani Arribas-Bel", email = "daniel.arribas.bel@gmail.com"},
]
maintainers = [
    {name = "contextily contributors"},
]
license = "BSD-3-Clause"
description = "Context geo-tiles in Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Matplotlib",
]
requires-python = ">=3.10"
dependencies = [
    "geopy",
    "matplotlib",
    "mercantile",
    "pillow",
    "rasterio",
    "requests",
    "joblib",
    "xyzservices"
]

[project.urls]
Home = "https://github.com/geopandas/contextily"
Repository = "https://github.com/geopandas/contextily"

[tool.setuptools.packages.find]
include = [
    "contextily",
    "contextily.*",
]

[tool.coverage.run]
omit = ["tests/*"]
